--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,20 +9,21 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - uses: pnpm/action-setup@v4
-        with:
-          version: 9
+      # - uses: npm/action-setup@v4
+      #   with:
+      #     version: 9
+
       - uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: 'pnpm'
+          cache: 'npm'
 
       - name: Install dependencies
         run: pnpm install
 
       - name: Zip extensions
         run: |
-          pnpm zip
+          npm zip
 
       - name: Archive production artifacts
         uses: actions/upload-artifact@v4
