--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,7 +23,7 @@ jobs:
 
       - name: Zip extensions
         run: |
-          npm zip
+          npm run zip
 
       - name: Archive production artifacts
         uses: actions/upload-artifact@v4
